<resources>
    <string name="app_name">Tutor18</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_item_edit">Edit</string>
    <string name="item_view_grade">Grade:</string>
    <string name="item_view_phone">Phone:</string>
    <string name="item_view_email">Email:</string>
    <string name="item_view_note">Note:</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_delete">Delete</string>
    <string name="dialog_delete_person_text">Are you sure to delete current person?</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="lesson_dialog_day_title">Day:</string>
    <string name="dialog_lesson_duration_title">Duration (min):</string>
    <string name="dialog_lesson_price_title">Price:</string>
    <string name="menu_item_add_lesson">Add lesson</string>
    <string name="dialog_lesson_delete_message">Are you sure to delete lesson?</string>
    <string name="message_events_created">Created events: %1$d</string>
    <string name="illegal_days_order"><![CDATA[Start day > than end day]]></string>
    <string name="dialog_fill_schedule_title">Fill schedule</string>
    <string name="dialog_fill_schedule_message">Existing lessons will be overridden in this period</string>
    <string name="dialog_delete_schedule_title">Delete schedule</string>
    <string name="dialog_delete_schedule_message">Existing lessons will be deleted in this period</string>
    <string name="message_events_deleted">Deleted events: %1$d</string>
    <string name="event_duration">%1$d min</string>
    <string name="price">$ %1$s</string>
    <string name="menu_item_select_date">Select date</string>
    <string name="title_subjects">Subjects:</string>
    <string name="title_notes">Note:</string>
    <string name="array_event_undefined">Undefined</string>
    <string name="array_event_held">Was held</string>
    <string name="array_event_not_held">Was not held</string>
    <string name="array_event_rescheduled">Rescheduled</string>
    <string name="dialog_state_title">State:</string>
    <string name="menu_item_save_event">Save event</string>
    <string name="menu_item_delete_event">Delete event</string>
    <string name="dialog_delete_event_title">Delete event</string>
    <string name="dialog_delete_event_message">Are you sure to delete current event?</string>
    <string name="message_saved">Saved</string>
    <string name="tab_layout_day">Day</string>
    <string name="tab_layout_week">Week</string>
    <string name="create_events_btn">Create</string>
    <string name="delete_events_btn">Delete</string>
    <string name="dialog_person_title">Person:</string>
    <string name="dialog_item_all">All</string>
    <string name="dialog_lessons_title">Lessons:</string>
    <string name="stats_day">Day:</string>
    <string name="stats_week">Week:</string>
    <string name="stats_month">Month:</string>
    <string name="stats_completed">Completed:</string>
    <string name="stats_canceled">Canceled:</string>
    <string name="stats_owned">Owned:</string>
    <string name="stats_paid">Paid:</string>
    <string name="item_view_time">Time:</string>
    <string name="item_view_person">Person:</string>
    <string name="item_view_duration">Duration:</string>
    <string name="item_view_lesson_price">Lesson price:</string>
    <string name="item_view_subjects">Subjects:</string>
    <string name="item_view_resch_from">Rescheduled from:</string>
    <string name="item_view_state">State:</string>
    <string name="item_view_date">Date:</string>
    <string name="item_view_expected">Expected:</string>
    <string name="item_view_current_payment">Payment:</string>
    <string name="item_view_weekday">Day of week:</string>
    <string name="item_view_start">Start:</string>
    <string name="item_view_price">Price:</string>
    <string name="item_view_end">End:</string>
    <string name="item_view_lesson">Lesson:</string>
    <string name="first_name_tv">First Name:</string>
    <string name="name_tv">Name:</string>
    <string name="header_summary">Worlds best tutor!</string>
    <string name="header_name">Android Studio</string>
</resources>
