<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:background="@drawable/background"
            android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/bottom_padding"
        android:paddingLeft="@dimen/dimen_default"
        android:paddingRight="@dimen/dimen_default">

        <com.kara4k.tutor18.view.custom.ItemView
            android:id="@+id/time_item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon_is_visible="true"
            app:icon_src="@drawable/ic_access_time_black_24dp"
            app:title_text="@string/item_view_time"/>

        <com.kara4k.tutor18.view.custom.ItemView
            android:id="@+id/name_item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon_is_visible="true"
            app:icon_src="@drawable/ic_person_black_24dp"
            app:summary_text=""
            app:title_text="@string/item_view_person"/>

        <com.kara4k.tutor18.view.custom.ItemView
            android:id="@+id/duration_item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:icon_is_visible="true"
            app:icon_src="@drawable/ic_timer_black_24dp"
            app:title_text="@string/item_view_duration"/>

        <com.kara4k.tutor18.view.custom.ItemView
            android:id="@+id/price_item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon_is_visible="true"
            app:icon_src="@drawable/ic_attach_money_black_24dp"
            app:title_text="@string/item_view_lesson_price"/>

        <View
            style="@style/Divider"/>

        <com.kara4k.tutor18.view.custom.ItemView
            android:id="@+id/subject_item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon_is_visible="true"
            app:icon_src="@drawable/ic_subject_black_24dp"
            app:title_text="@string/item_view_subjects"/>

        <com.kara4k.tutor18.view.custom.ItemView
            android:id="@+id/note_item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon_is_visible="true"
            app:icon_src="@drawable/ic_note_black_24dp"
            app:title_text="@string/item_view_note"/>

        <View
            style="@style/Divider"/>

        <com.kara4k.tutor18.view.custom.ItemView
            android:id="@+id/rescheduled_from_item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon_is_visible="true"
            app:icon_src="@drawable/ic_undo_black_24dp"
            app:title_text="@string/item_view_resch_from"/>

        <com.kara4k.tutor18.view.custom.ItemView
            android:id="@+id/state_item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon_is_visible="true"
            app:icon_src="@drawable/ic_help_outline_black_24dp"
            app:title_text="@string/item_view_state"/>

        <LinearLayout
            android:id="@+id/rescheduled_to_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.kara4k.tutor18.view.custom.ItemView
                android:id="@+id/rescheduled_to_day_item_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon_is_visible="true"
                app:icon_src="@drawable/ic_event_black_24dp"
                app:title_text="@string/item_view_date"/>

            <com.kara4k.tutor18.view.custom.ItemView
                android:id="@+id/rescheduled_to_time_item_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon_is_visible="true"
                app:icon_src="@drawable/ic_access_time_black_24dp"
                app:title_text="@string/item_view_time"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/payment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                style="@style/Divider"/>

            <com.kara4k.tutor18.view.custom.ItemView
                android:id="@+id/expected_item_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon_is_visible="true"
                app:icon_src="@drawable/ic_attach_money_black_24dp"
                app:summary_text="$ 180.00"
                app:title_text="@string/item_view_expected"/>

            <com.kara4k.tutor18.view.custom.ItemView
                android:id="@+id/payment_item_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                app:check_box_is_visible="true"
                app:is_checkable="true"
                app:title_text="@string/item_view_current_payment"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>