<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@drawable/background"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_marginLeft="@dimen/dimen_default"
              android:layout_marginRight="@dimen/dimen_default"
              android:layout_height="wrap_content">
    <com.kara4k.tutor18.view.custom.ItemView
        android:id="@+id/start_date_item_view"
        app:title_text="@string/item_view_start"
        app:icon_src="@drawable/ic_event_black_24dp"
        app:icon_is_visible="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.kara4k.tutor18.view.custom.ItemView
        app:title_text="@string/item_view_end"
        android:id="@+id/end_date_item_view"
        app:icon_src="@drawable/ic_event_black_24dp"
        app:icon_is_visible="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View style="@style/Divider"/>
    <com.kara4k.tutor18.view.custom.ItemView
        app:title_text="@string/item_view_person"
        android:id="@+id/person_item_view"
        app:icon_is_visible="true"
        app:icon_src="@drawable/ic_person_black_24dp"
        app:summary_text="All"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.kara4k.tutor18.view.custom.ItemView
        android:layout_width="match_parent"
        android:id="@+id/lesson_item_view"
        app:title_text="@string/item_view_lesson"
        app:summary_text="All"
        app:icon_is_visible="true"
        app:icon_src="@drawable/ic_event_black_24dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/dimen_default"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/create_date_events_button"
            android:text="@string/create_events_btn"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/text_views_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/delete_date_events_button"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/text_views_margin"
            android:layout_weight="1"
            android:text="@string/delete_events_btn"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>