<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"

                  android:paddingLeft="@dimen/dimen_default"
                  android:paddingRight="@dimen/dimen_default">

        <com.kara4k.tutor18.view.custom.ItemView
            android:id="@+id/name_item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:icon_is_visible="true"
            app:icon_src="@drawable/ic_person_black_24dp"/>

        <com.kara4k.tutor18.view.custom.ItemView
            android:id="@+id/grade_item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon_is_visible="true"
            app:icon_src="@drawable/ic_account_balance_black_24dp"
            app:title_text="@string/item_view_grade"/>

        <com.kara4k.tutor18.view.custom.ItemView
            android:id="@+id/phone_item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon_is_visible="true"
            app:icon_src="@drawable/ic_call_black_24dp"
            app:title_text="@string/item_view_phone"/>

        <com.kara4k.tutor18.view.custom.ItemView
            android:id="@+id/email_item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon_is_visible="true"
            app:icon_src="@drawable/ic_email_black_24dp"
            app:title_text="@string/item_view_email"/>

        <com.kara4k.tutor18.view.custom.ItemView
            android:id="@+id/note_item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon_is_visible="true"
            app:icon_src="@drawable/ic_note_black_24dp"
            app:title_text="@string/item_view_note"/>

        <View
            style="@style/Divider"/>

        <LinearLayout
            android:id="@+id/lessons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bottom_padding">

        </LinearLayout>


    </LinearLayout>
</ScrollView>