<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusableInTouchMode="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginLeft="@dimen/dimen_default"
                  android:layout_marginRight="@dimen/dimen_default"
                  android:animateLayoutChanges="true"
                  android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_default"
            android:layout_marginRight="@dimen/dimen_default"
            android:layout_marginTop="@dimen/dimen_default"
            android:text="@string/first_name_tv"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_default"
            android:layout_marginRight="@dimen/dimen_default"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_default"
            android:layout_marginRight="@dimen/dimen_default"
            android:layout_marginTop="@dimen/dimen_default"
            android:text="@string/name_tv"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_default"
            android:layout_marginRight="@dimen/dimen_default"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_default"
            android:layout_marginRight="@dimen/dimen_default"
            android:layout_marginTop="@dimen/dimen_default"
            android:text="@string/item_view_grade"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/grade_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_default"
            android:layout_marginRight="@dimen/dimen_default"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_default"
            android:layout_marginRight="@dimen/dimen_default"
            android:layout_marginTop="@dimen/dimen_default"
            android:text="@string/item_view_phone"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_marginLeft="@dimen/dimen_default"
            android:layout_marginRight="@dimen/dimen_default"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_default"
            android:layout_marginRight="@dimen/dimen_default"
            android:layout_marginTop="@dimen/dimen_default"
            android:text="@string/item_view_email"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="@dimen/dimen_default"
            android:layout_marginRight="@dimen/dimen_default"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_default"
            android:layout_marginRight="@dimen/dimen_default"
            android:layout_marginTop="@dimen/dimen_default"
            android:text="@string/item_view_note"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/note_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_default"
            android:layout_marginRight="@dimen/dimen_default"
            />

    </LinearLayout>
</ScrollView>

